--- a/package.json
+++ b/package.json
@@ -8,12 +8,63 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~39.0.2",
-    "expo-status-bar": "~1.0.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12"
+    "@expo-google-fonts/inter": "^0.1.0",
+    "@expo-google-fonts/poppins": "^0.1.0",
+    "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-community/clipboard": "^1.2.3",
+    "@react-native-community/datetimepicker": "2.4.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "^5.9.6",
+    "@react-navigation/drawer": "^5.9.0",
+    "@react-navigation/native": "^5.7.3",
+    "expo": "^38.0.9",
+    "expo-font": "~8.2.1",
+    "expo-image-picker": "~8.3.0",
+    "expo-location": "~8.2.1",
+    "expo-notifications": "~0.3.3",
+    "expo-permissions": "~9.0.1",
+    "expo-sqlite": "^8.2.1",
+    "expo-sqlite-orm": "^1.5.4",
+    "expo-status-bar": "^1.0.2",
+    "faker": "^5.1.0",
+    "google-translate-api": "^2.3.0",
+    "native-base": "^2.13.13",
+    "react": "~16.11.0",
+    "react-dom": "~16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-animatable": "^1.3.3",
+    "react-native-cluster-map": "^1.0.8",
+    "react-native-date-picker": "^3.1.0",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-get-location": "^1.4.3",
+    "react-native-google-places-autocomplete": "^1.8.0",
+    "react-native-image-base64": "^0.1.4",
+    "react-native-image-overlay": "^0.1.2",
+    "react-native-indicators": "^0.17.0",
+    "react-native-loading-spinner-overlay": "^1.1.0",
+    "react-native-localization": "^2.1.6",
+    "react-native-localize": "^1.4.1",
+    "react-native-map-clustering": "^3.3.9",
+    "react-native-maps": "0.27.1",
+    "react-native-maps-directions": "^1.8.0",
+    "react-native-material-textfield": "^0.16.1",
+    "react-native-offline": "^5.7.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-render-html": "^4.2.3",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-same-toast": "^1.0.1",
+    "react-native-screens": "~2.9.0",
+    "react-native-share": "^3.7.0",
+    "react-native-simple-toast": "^1.1.2",
+    "react-native-snackbar": "^2.2.3",
+    "react-native-snackbar-component": "^1.1.10",
+    "react-native-upload-image-expo": "^1.2.3",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.4.0",
+    "react-navigation-drawer": "^2.5.0",
+    "react-navigation-stack": "^2.8.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
