--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/netinfo": "^5.9.6",
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/native": "^5.7.3",
+    "axios": "^0.21.1",
     "expo": "^38.0.9",
     "expo-font": "~8.2.1",
     "expo-image-picker": "~8.3.0",
